# poker-table-tool

./: .gitignore  extract_888.py  extract_acr.py  extract_gg.py  main.py  main.spec  poker_tournaments.html  pyproject.toml  script.py
.github/workflows/: build-windows.yml
tests/: test_poker_table_tool.py
