[tool.poetry]
name = "poker-table-tool"
version = "0.1.0"
description = ""
authors = ["Dennis Reinkober <dennis@reinkober.it>"]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
plotly = "^5.24.1"
tkinterhtml = "^0.7"
tkhtmlview = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
